@@ -53,6 +53,7 @@ import java.io.UnsupportedEncodingException;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicReference;
@@ -100,10 +101,61 @@ public class ResourceCaches {
      *
      * @param eTag The ETag identifier
      * @param requestData The request data
+     * @param paramNames The names of the parameters to consider
+     * @return The appropriate cache key
+     */
+    public static String generateThumbnailCacheKey(String eTag, AJAXRequestData requestData, String... paramNames) {
+        StringBuilder sb = new StringBuilder(512);
+        sb.append(requestData.getModule());
+        sb.append('-').append(requestData.getAction());
+        sb.append('-').append(requestData.getSession().getContextId());
+
+        // Append sorted parameters
+        {
+            List<String> parameters = new ArrayList<String>(Arrays.asList(paramNames));
+            Collections.sort(parameters);
+            for (String name : parameters) {
+                if (isAcceptableParameter(name)) {
+                    sb.append('-').append(name);
+                    String parameter = requestData.getParameter(name);
+                    if (!Strings.isEmpty(parameter)) {
+                        sb.append('=').append(parameter);
+                    }
+                }
+            }
+        }
+
+        // Generate MD5 sum
+        try {
+            byte[] md5Bytes = sb.toString().getBytes("UTF-8");
+            String hashedParams = asHex(MessageDigest.getInstance("MD5").digest(md5Bytes));
+            String prefix = eTag;
+
+            // ensure key size does not exceed 128 characters (current db limit)
+            if (prefix.length() + 33 > 128) {
+                prefix = asHex(MessageDigest.getInstance("MD5").digest(prefix.getBytes()));
+            }
+            sb.setLength(0);
+            return sb.append(prefix).append('-').append(hashedParams).toString();
+        } catch (UnsupportedEncodingException e) {
+            // Shouldn't happen
+            LOG.error("", e);
+        } catch (NoSuchAlgorithmException e) {
+            // Shouldn't happen
+            LOG.error("", e);
+        }
+        return sb.toString();
+    }
+
+    /**
+     * Generates the key for preview cache.
+     *
+     * @param eTag The ETag identifier
+     * @param requestData The request data
      * @param optParameters Optional parameters to consider
      * @return The appropriate cache key
      */
-    public static String generatePreviewCacheKey(final String eTag, final AJAXRequestData requestData, final String... additionalParams) {
+    public static String generatePreviewCacheKey(String eTag, AJAXRequestData requestData, String... additionalParams) {
         final StringBuilder sb = new StringBuilder(512);
         sb.append(requestData.getModule());
         sb.append('-').append(requestData.getAction());
@@ -111,12 +163,12 @@ public class ResourceCaches {
 
         // Append sorted parameters
         {
-            final List<String> parameters = new ArrayList<String>(requestData.getParameters().keySet());
+            List<String> parameters = new ArrayList<String>(requestData.getParameters().keySet());
             Collections.sort(parameters);
-            for (final String name : parameters) {
+            for (String name : parameters) {
                 if (isAcceptableParameter(name)) {
                     sb.append('-').append(name);
-                    final String parameter = requestData.getParameter(name);
+                    String parameter = requestData.getParameter(name);
                     if (!Strings.isEmpty(parameter)) {
                         sb.append('=').append(parameter);
                     }
@@ -126,7 +178,7 @@ public class ResourceCaches {
 
         // Append additional parameters, if given
         if (null != additionalParams) {
-            for (final String additionalParam : additionalParams) {
+            for (String additionalParam : additionalParams) {
                 if (!Strings.isEmpty(additionalParam)) {
                     sb.append('-').append(additionalParam);
                 }
@@ -135,8 +187,8 @@ public class ResourceCaches {
 
         // Generate MD5 sum
         try {
-            final byte[] md5Bytes = sb.toString().getBytes("UTF-8");
-            final String hashedParams = asHex(MessageDigest.getInstance("MD5").digest(md5Bytes));
+            byte[] md5Bytes = sb.toString().getBytes("UTF-8");
+            String hashedParams = asHex(MessageDigest.getInstance("MD5").digest(md5Bytes));
             String prefix = eTag;
 
             // ensure key size does not exceed 128 characters (current db limit)
@@ -145,21 +197,21 @@ public class ResourceCaches {
             }
             sb.setLength(0);
             return sb.append(prefix).append('-').append(hashedParams).toString();
-        } catch (final UnsupportedEncodingException e) {
+        } catch (UnsupportedEncodingException e) {
             // Shouldn't happen
             LOG.error("", e);
-        } catch (final NoSuchAlgorithmException e) {
+        } catch (NoSuchAlgorithmException e) {
             // Shouldn't happen
             LOG.error("", e);
         }
         return sb.toString();
     }
 
-    private static boolean isAcceptableParameter(final String name) {
+    private static boolean isAcceptableParameter(String name) {
         if (Strings.isEmpty(name)) {
             return false;
         }
-        final String n = Strings.toLowerCase(name);
+        String n = Strings.toLowerCase(name);
         return !"session".equals(n) && !"action".equals(n);
     }
 
@@ -171,9 +223,9 @@ public class ResourceCaches {
      * @param hash Array of bytes to convert to hex-string
      * @return Generated hex string
      */
-    public static String asHex(final byte[] hash) {
-        final int length = hash.length;
-        final char[] buf = new char[length * 2];
+    public static String asHex(byte[] hash) {
+        int length = hash.length;
+        char[] buf = new char[length * 2];
         for (int i = 0, x = 0; i < length; i++) {
             buf[x++] = HEX_CHARS[(hash[i] >>> 4) & 0xf];
             buf[x++] = HEX_CHARS[hash[i] & 0xf];
